# android_as_peripheral_pc_host

./: .gitmodules  CMakeLists.txt  README.md
include/: IConnectionProvider.hpp  IpAddrStringCodeCvt.hpp  LibA.hpp  Websocket.hpp  ip4.hpp
include/communications/events/: AxisInputProcessor.hpp  Event.hpp  EventListenerBase.hpp  EventReader.hpp  IEvent.hpp
include/communications/events/evdev/: EvdevEventListener.hpp  GenEvdevEventListener.hpp
include/utils/: AtomicWrapper.hpp  SimultaneousBufferMutex.hpp  SimultaneousBufferReader.hpp  SimultaneousBufferWriter.hpp
include/websocket/: IEndpointWrapper.hpp  IWebSocketClient.hpp  Remote.hpp
include/websocket/test/: IRemoteCallbacksMock.hpp
include/websocket/websocketpp/: WebSocketppClient.hpp
include/websocket/websocketpp/server/: GenWSPPServer.hpp  WSPPServerDefs.hpp  WSServerMock.hpp  WebSocketppServer.hpp
include/websocket/websocketpp/server/test/: WSServerMock.hpp
sandbox/: CMakeLists.txt  Codec.cpp  Codec.hpp  OpenCVDisplay.cpp  OpenCVDisplay.hpp  main.cpp  recv_main.cpp  send_main.cpp
src/: CMakeLists.txt  IpCodeConversion.cpp  LibA.cpp  ip4.cpp  main.cpp
src/communication/events/: AxisInputProcessor.cpp  Event.cpp  EventListenerBase.cpp  EventReader.cpp
src/communication/events/evdev/: EvdevEventListener.cpp  GenEvdevEventListener.cpp
src/utils/: AtomicWrapper.cpp
src/websocket/: IWebSocketClient.cpp  Remote.cpp
src/websocket/websocketpp/: WebSocketppClient.cpp
src/websocket/websocketpp/server/: GenWSPPServer.cpp
test/: CMakeLists.txt  TestIpAddrStringCodeCvt.cpp  TestLibA.cpp  Test_ip4.cpp  main.cpp
test/websocket/: TestRemote.cpp
test/websocket/websocketpp/server/: TestWebSocketppServer.cpp
